@startuml
package BackupService{
    namespace Entities{
        class JobObject{
            {field}+ Name
            {field}+ Path
        } 
        class BackupJob{
            {method}+AddObject(JobObject);
            {method}+RemoveObject(JobObject)
            {method}+CreateRestorePoint()                   
         }
        class RestorePoint{
            {field}+IReadOnlyList<Storage>
            {field}+Guid
            {field}DateTime                   
        }
        class Storage{
            {field}+ Hash
            {field}+ Name
            {field}+ Path
        }  
        class Backup{
            {field} -List<RestorePoint> _restorePoints;
            {method} +AddRestorePoint(RestorePoint)
        }
        BackupJob o-- Backup
        BackupJob o-- "0..n" JobObject
        RestorePoint o-- "0..n" Storage
        Backup *-- "0..n" RestorePoint
    }
    
    namespace Repositories{
        interface IRepository{
            {method} CreateStorage(JobObject) : Storage 
        }
        class LocalFSRepository{
            {field} +RepositoryPath
        }
        IRepository <|-- LocalFSRepository
    } 
   
    namespace Algorythms{
        interface IRestorePointAlgorythm{
            {method} Run(List<JobObject>, IRepository) : IReadOnlyList<Storage> 
        }
        class SingleFileRestorePointCreationalAlgorithm
        IRestorePointAlgorythm <|-- SingleFileRestorePointCreationalAlgorithm
    }
    Entities.BackupJob o-- Algorythms.IRestorePointAlgorythm
    Entities.BackupJob o-- Repositories.IRepository
}

@enduml